--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<title>tldraw llm sandbox</title>
 	</head>
-	<body>
+	<body class="text-base">
 		<div id="root"></div>
 		<script type="module" src="/src/main.tsx"></script>
 	</body>
